--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,14 +2,26 @@
 
 {% block content %}
 
-    <h1>Hello, {{user.username}}</h1>
+    <form action="/tasks" method="POST">
+      <label for="title">Title:</label>
+      <input type="text" name="title" id="title" />
+      <label for="description">Description:</label>
+      <textarea name="description" id="description" rows="4" cols="80"></textarea>
+      <input type="submit" value="Add Task">
+    </form>
+    <h1>Hi, {{ user.username }}!</h1>
     {% for task in tasks %}
-        <div>
-            <p>
-                {{task.title }}: <b>{{task.description}}</b>
-                
-          
-            </p>
-        </div>
+    <div>
+      {{ task.title }}: <b>{{ task.description }}</b>
+        {% if task.done %}
+        <span> &#9989;</span>
+        {% else %}
+        <span>
+          <form style="display:inline" action="/tasks/{{task.id}}" method="POST">
+            <input type="submit" value="Mark as complete">
+          </form>
+        </span>
+        {% endif %}
+    </div>
     {% endfor %}
 {% endblock %}
